src/assets/scss/iadc/_tables.scss
// Tables =================================================
table.confluenceTable {
  text-align: left;
  position: relative;
  border-collapse: collapse;
  color: var(--font-color);
  margin-left: 0;
  margin-right: auto;
  table-layout: fixed;

  // Fix 'default' tables to 60% of the layout width
  &[data-layout='default'] {
    max-width: 100%;
  }

  // Fix 'wide' tables to fit the 100% of the layout
  &[data-layout='wide'] {
    max-width: 100%;
  }

  // Fix 'full-width' tables to fit the 100% of the layout
  &[data-layout='full-width'] {
    max-width: 100%;
  }

  // Fix SVG's width embedded in tables like roadmap macros
  svg {
    max-width: 100%;
    overflow: visible;
  }
}

// Nested tables (one level deep) ==========================
// Confluence allows a table inside a cell. Constrain it to the width of its
// parent cell so it never overflows into the column on the right.
table.confluenceTable td.confluenceTd table.confluenceTable,
table.confluenceTable th.confluenceTh table.confluenceTable {
  width: 100%;
  max-width: 100%;
  margin-top: 0;
}

table.confluenceTable td.confluenceTd .table-wrap,
table.confluenceTable th.confluenceTh .table-wrap {
  max-width: 100%;
  margin-top: 0;
  overflow-x: auto;
}

table.confluenceTable th.confluenceTh {
  position: -webkit-sticky;
  position: sticky;
  top: 0; /* Required for the stickiness */
  z-index: 2;
  box-shadow: 0 3px 2px -1px rgba(0, 0, 0, 0.4);
  font-size: var(--main-font-size);
  font-weight: bold;

  p {
    font-weight: var(--main-font-weight);
  }
}

.table-wrap {
  box-sizing: border-box;
  // with sticky table headersm we cannot have the horizontal scroll.
  // overflow:auto; // make tables that are too wide horizontally scrollable
}

.confluenceTh,
.confluenceTd {
  border: 1px solid #ddd;
  padding: 7px 10px; /* CONFDEV-13618: line-height will add up 3 pixels, so we have a 10px top padding for text. Images will remain with 7px top margin though (see thread in Stash) */
  vertical-align: top;
  min-width: 8px; /* CONF-39943: set table cell min-width to which cursor can be focused */
  word-wrap: break-word;
  // word-break: break-word; // breaking words will fix the max-width properties for all tables

  h1,
  h2,
  h3 {
    font-weight: 600;
  }
}

/* Lists in tables */
.confluenceTable ol,
.confluenceTable ul {
  margin-left: 0;
  padding-left: 22px; /* CONFDEV-12589: default left padding is far too wide */
}

/* all tables should have a top margin of 10px */
.confluenceTable,
.table-wrap {
  margin: auto;
  margin-top: 20px;
}

/* an exception to above rule for tables that are first child */
.confluenceTable:first-child,
.table-wrap:first-child {
  margin-top: 20px;
}

/* Tables with layout full-width or wide shall be displayed as 100% width*/
table.confluenceTable[data-layout="full-width"],
table.confluenceTable[data-layout="wide"] {
  width: 100%;
}

/* Default background colors header row and column */
table.confluenceTable th.confluenceTh {
  &:not([data-highlight-colour]),
  &:not([data-highlight-colour]) > p,
  &.highlight-grey,
  &.highlight-grey > p {
    background-color: var(--highlight-grey);
  }
}

/* Background colors */
table.confluenceTable th.confluenceTh,
table.confluenceTable td.confluenceTd {
  &.highlight-grey,
  &.highlight-grey > p {
    background-color: var(--highlight-grey);
  }

  &.highlight-blue,
  &.highlight-blue > p {
    background-color: var(--highlight-blue);
  }

  &.highlight-green,
  &.highlight-green > p {
    background-color: var(--highlight-green);
  }

  &.highlight-red,
  &.highlight-red > p {
    background-color: var(--highlight-red);
  }

  &.highlight-yellow,
  &.highlight-yellow > p {
    background-color: var(--highlight-yellow);
  }
}

table.confluenceTable td.confluenceTd img,
table.confluenceTable td.confluenceTd .confluence-embedded-file-wrapper img,
table.confluenceTable th.confluenceTh .confluence-embedded-file-wrapper img {
  max-width: auto;
}

table.confluenceTable td.numberingColumn {
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  cursor: default;
}

// Table Decision Report ======================================
table.tasks-table-sortable {
  text-align: left;
  position: relative;
  border-collapse: collapse;
  th {
    font-size: 1.2em;
    line-height: 1.5em;
    padding-left: 0.5em;
  }
  td {
    border: 1px solid #ddd;
    text-align: left;
    padding: 0.2em 0.5em 0.2em 0.5em;
    vertical-align: top;
  }
}

// Table Task Report ======================================
table.tasks-report {
  margin: 10px 0 0 0;

  text-align: left;
  position: relative;
  border-collapse: collapse;
  th {
    font-size: 1.2em;
    line-height: 1.5em;
    padding-left: 0.5em;
  }
  td {
    border: 1px solid #ddd;
    text-align: left;
    padding: 0.2em 0.5em 0.2em 0.5em;
    vertical-align: top;
  }
}

